# wsc

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  Cargo.toml  Dockerfile.bytehound  EMBEDDED_ROADMAP.md  IMMEDIATE_SECURITY_FIXES.md  MODULE.bazel  PHASE1_COMPLETE.md  PHASE4_COMPLETE.md  PROVENANCE_IMPLEMENTATION_GUIDE.md  PROVENANCE_RESEARCH_INDEX.md  README.md  RESEARCH_SUMMARY.md  SECURITY.md  TESTING.md  WORKSPACE  bazel-bin  bazel-out  bazel-testlogs  bazel-wasmsign2  test_specific_entry.rs
.claude/: settings.local.json
.github/workflows/: fuzz.yml  memory-profile.yml  publish-to-crates-io.yml  release.yml  rust.yml  wasm-signing.yml
docs/: INCIDENT_RESPONSE.md  TARA_COMPLIANCE.md  THREAT_MODEL.md  automotive-regulatory-compliance.md  bazel-build-guide.md  checkpoint_implementation.md  checkpoint_security_audit.md  composition-threat-model.md  dogfooding.md  keyless.md  memory_profiling.md  provenance-supply-chain-research.md  provisioning-guide.md  rekor_checkpoint_format.md  rekor_testing.md  security-analysis.md  sigstore-rs_comparison.md  slsa-compliance.md  wac-integration-roadmap.md  wac-provenance-integration.md
docs/security/: ASSET_INVENTORY.md  INTEGRATION_GUIDANCE.md  RISK_ASSESSMENT.md  assessment-2025-11.md
examples/: composition-signing.rs  iot_provisioning.rs  loom-integration.md  wac-composition-workflow.sh
examples/policies/: development.toml  production.toml  slsa-l3.toml
examples/wasmtime-loader/: Cargo.toml  README.md
examples/wasmtime-loader/components/: hello.wat
examples/wasmtime-loader/keys/: README.md
examples/wasmtime-loader/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_keyless_signature.rs  fuzz_module_parsing.rs  fuzz_public_key.rs  fuzz_rekor_entry.rs  fuzz_signature_data.rs  fuzz_varint.rs
scripts/: fetch_recent_rekor_entry.sh  profile-memory.sh  publish.rs  test_rekor_verification.sh  update-rekor-test-data.sh
src/attestation/: Cargo.toml  README.md
src/attestation/src/: lib.rs
src/cli/: BUILD.bazel  Cargo.toml  main.rs
src/component/: BUILD.bazel  Cargo.toml
src/component/src/: lib.rs
src/lib/: BUILD.bazel  Cargo.toml  build.rs
src/lib/src/: error.rs  lib.rs  secure_file.rs  split.rs  time.rs
src/lib/src/airgapped/: bundle.rs  config.rs  mod.rs  state.rs  storage.rs  tuf.rs  verifier.rs
src/lib/src/audit/: mod.rs
src/lib/src/composition/: mod.rs
src/lib/src/metrics/: mod.rs
src/lib/src/platform/: mod.rs  sgx.rs  software.rs  tpm2.rs  trustzone.rs
src/lib/src/platform/secure_element/: atecc608.rs  mod.rs  se050.rs
src/lib/src/policy/: eval.rs  mod.rs  slsa.rs
src/lib/src/provisioning/: ca.rs  csr.rs  device.rs  mod.rs  session.rs  verification.rs  wasm_signing.rs
src/lib/src/signature/: hash.rs  info.rs  keys.rs  matrix.rs  mod.rs  multi.rs  sig_sections.rs  simple.rs
src/lib/src/signature/keyless/: cert_pinning.rs  cert_verifier.rs  format.rs  fulcio.rs  merkle.rs  mod.rs  oidc.rs  rate_limit.rs  rekor.rs  rekor_verifier.rs  rekor_verifier.rs.test_data  signer.rs
src/lib/src/signature/keyless/rekor_verifier.rs.test_data/: recent_entry_20251101_175321.json
src/lib/src/wasm_module/: mod.rs  varint.rs
src/lib/tests/: airgapped_e2e.rs  keyless_integration.rs
wit/: BUILD.bazel  signing.wit  worlds.wit
