[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/lib",
    "src/component",
]

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Frank Denis <github@pureftpd.org>"]
license = "MIT"
repository = "https://github.com/wasm-signatures/wasmsign2"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols
