[workspace]
resolver = "2"
members = [
    "src/attestation",
    "src/cli",
    "src/lib",
    "src/component",
]
exclude = [
    "examples/wasmtime-loader",
]

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["Frank Denis <github@pureftpd.org>"]
license = "MIT"
repository = "https://github.com/pulseengine/wsc"

[profile.release]
codegen-units = 1
incremental = false
panic = "abort"
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
strip = true        # Strip symbols
# SECURITY: Detect integer overflow in release builds (TARA requirement)
overflow-checks = true
