[package]
name = "wsc-attestation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Transformation attestation types for WebAssembly toolchains"
readme = "README.md"
keywords = ["webassembly", "attestation", "provenance", "supply-chain"]
homepage = "https://github.com/pulseengine/wsc"
categories = ["wasm", "development-tools"]

# Minimal dependencies - this crate is designed to be lightweight
# so tools like Loom/WAC can add attestations without heavy deps
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
hex = "0.4"
getrandom = "0.3"
sha2 = "0.10"  # Proper SHA-256 for artifact hashing

# Optional signing support - enables build_and_sign_ed25519() method
ed25519-compact = { version = "2.1", optional = true }
ct-codecs = { version = "1.1", optional = true }  # Base64 encoding

# Optional: Official standards crates (adds more dependencies)
# Enable with "standards" feature for full SLSA/DSSE/in-toto support
in_toto_attestation = { version = "0.1", optional = true }

[features]
default = []
# Enable Ed25519 signing for attestations
# Tools can enable this to sign their attestations with external keys
signing = ["ed25519-compact", "ct-codecs"]
# Enable official in-toto/SLSA/DSSE types from standards bodies
# Use this when you need full standards compliance
standards = ["in_toto_attestation"]

[dev-dependencies]
