[package]
name = "wsc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool to sign and verify WebAssembly modules"
readme = "../../README.md"
keywords = ["webassembly", "modules", "signatures"]
homepage = "https://github.com/pulseengine/wsc"
categories = ["cryptography", "wasm"]

[[bin]]
name = "wsc"
path = "main.rs"

[dependencies]
clap = { version = "4.5.50", default-features = false, features = [
    "std",
    "cargo",
    "wrap_help",
] }
env_logger = { version = "0.11.8", default-features = false, features = [
    "humantime",
] }
regex = "1.12.2"
# HTTP client for keyless signing
ureq = { version = "3.1.2" }
wasi = { version = "0.14.7" }
wsc = { version = "0.5.0", path = "../lib" }
serde_json = "1.0"
