"""WebAssembly component that exports the wasmsign signing interface

This component wraps the wasmsign2 library and exposes a clean WIT interface
for reuse by other components, JavaScript via jco, or integration into CI/CD.

The rust_wasm_component_bindgen rule uses Cargo to build, so it automatically
handles the path dependency to //src/lib via Cargo.toml.
"""

load("@rules_wasm_component//rust:defs.bzl", "rust_wasm_component_bindgen")

package(default_visibility = ["//visibility:public"])

# Component library (exports WIT interface)
rust_wasm_component_bindgen(
    name = "signing_lib",
    srcs = ["src/lib.rs"],
    profiles = ["release"],
    wit = "//wit:wasmsign_wit",
    # Add wasmsign2 library as Bazel dependency
    deps = ["//src/lib:wasmsign2"],
)
