[package]
name = "wsc-component"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly component that exports the wsc signing interface"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core signing library
wsc = { version = "0.5.0", path = "../lib" }

# WIT bindings generation
wit-bindgen = { version = "0.47.0", default-features = false, features = ["realloc"] }
