[package]
name = "wasmsign2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "An implementation of the WebAssembly modules signatures proposal"
readme = "../../README.md"
keywords = ["webassembly", "modules", "signatures"]
homepage = "https://github.com/wasm-signatures/design"
categories = ["cryptography", "wasm"]

[dependencies]
anyhow = "1.0.100"
ct-codecs = "1.1.6"
ed25519-compact = { version = "2.1.1", features = ["pem"] }
getrandom = { version = "0.2.15", features = ["js"] }
hmac-sha256 = "1.1.12"
log = "0.4.28"
regex = "1.12.2"
ssh-keys = "0.1.4"
thiserror = "2.0.17"
