[package]
name = "wsc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly Signature Component - WASM signing and verification toolkit"
readme = "../../README.md"
keywords = ["webassembly", "modules", "signatures"]
homepage = "https://github.com/pulseengine/wsc"
categories = ["cryptography", "wasm"]

[dependencies]
anyhow = "1.0.100"
ct-codecs = "1.1.6"
ed25519-compact = { version = "2.1.1", features = ["pem"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
hmac-sha256 = "1.1.12"
log = "0.4.28"
sha2 = "0.10"
regex = "1.12.2"
ssh-keys = "0.1.4"
thiserror = "2.0.17"
# Security: zeroize sensitive data on drop
zeroize = { version = "1.8", features = ["derive"] }
# WASI HTTP support - only used on wasm32-wasip2 via cfg guards
wasi = "0.14.7"

# Keyless signing dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"  # RFC 8785 JSON Canonicalization for Rekor SET verification
base64 = "0.22"
x509-parser = "0.16"
time = "0.3"
chrono = "0.4"
hex = "0.4"
# ureq is only used on native (cfg-guarded), but must be unconditional for Bazel
ureq = "3.1.2"
# SPKI encoding for public keys
spki = { version = "0.7", features = ["alloc"] }
# ECDSA P-256 for keyless signing (required by Sigstore/Rekor hashedrekord)
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing"] }
# Certificate chain verification (WebPKI)
rustls-webpki = { version = "0.103", default-features = false, features = ["std"] }
rustls-pki-types = { version = "1.11", default-features = false }
pem = "3.0"
const-oid = { version = "0.9", default-features = false, features = ["db"] }

[features]
default = ["software-keys"]
# Software-based key storage (always available, for development/testing)
software-keys = []
# Hardware security backends (embedded/production)
tpm2 = []  # TPM 2.0 support - will add tpm2-tss dependency
secure-element = []  # Generic secure element support
atecc608 = ["secure-element"]  # Microchip ATECC608 (I2C)
se050 = ["secure-element"]  # NXP SE050 EdgeLock (I2C/SPI)
trustzone = []  # ARM TrustZone / OP-TEE support
sgx = []  # Intel SGX support
